# tauri-plugin-sherpaNcnn

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: NcnnClient.kt  NcnnClientPlugin.kt  SherpaNcnn.kt
android/src/test/java/: ExampleUnitTest.kt
example/: package.json  pnpm-lock.yaml
example/src/: App.vue
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/: README.md  index.html  jsconfig.json  package.json  vite.config.js
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/src/lib/: Greet.svelte
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: ncnn-init-microphone.toml  ncnn-init-recognizer.toml  ncnn-start-recognize.toml  ncnn_init_microphone.toml  ncnn_init_recognizer.toml  ncnn_init_recognizer_from_asset.toml  ncnn_start_recognize.toml  ncnn_stop_recognize.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
